# Software

./: requirements.txt
catkin_ws/src/20-indefinite-navigation/charging_control/: package.xml
catkin_ws/src/20-indefinite-navigation/charging_control/src/: charging_control_node.py
catkin_ws/src/20-indefinite-navigation/maintenance_control/: package.xml
catkin_ws/src/20-indefinite-navigation/maintenance_control/launch/: maintenance_control_node.launch
catkin_ws/src/20-indefinite-navigation/maintenance_control/src/: maintenance_control_node.py
catkin_ws/src/40-coordination/charging_manager_module1/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/40-coordination/charging_manager_module1/launch/: charging_manager_node.launch
catkin_ws/src/40-coordination/charging_manager_module1/src/: charging_manager_node.py
catkin_ws/src/40-coordination/charging_manager_module2/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/40-coordination/charging_manager_module2/launch/: charging_manager_node.launch
catkin_ws/src/40-coordination/charging_manager_module2/src/: charging_manager_node.py
catkin_ws/src/40-coordination/doorkeeper/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/40-coordination/doorkeeper/launch/: doorkeeper_node.launch
catkin_ws/src/40-coordination/doorkeeper/src/: doorkeeper_node.py
catkin_ws/src/40-coordination/explicit_coordinator/src/: coordinator_node.py
catkin_ws/src/40-coordination/led_detection/src/: led_detector_node.py
(+14 files in other folders)
