<?xml version="1.0"?>
<package>
  <name>charging_manager_module1</name>
  <version>1.0.0</version>

  <license>GPLv3</license>
  <maintainer email="andera@student.ethz.ch">Ali Ander</maintainer>
  <maintainer email="zaluskat@student.ethz.ch">Tomasz Zaluska</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rgb_led</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rgb_led</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


</package>
